--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -147,12 +147,17 @@
 		<receiver
 			android:permission="android.permission.RECEIVE_BOOT_COMPLETED" android:name=".receiver.TestBroadcastReceiver">>
 			<intent-filter>
-				<action android:name="android.intent.action.BOOT_COMPLETED" />
-				<action android:name="android.intent.action.TIME_SET" />
-				<action android:name="android.intent.action.TIMEZONE_CHANGED" />
-				<action android:name="android.intent.action.LOCALE_CHANGED" />
 				<action android:name="android.intent.action.ACTION_POWER_CONNECTED" />
 				<action android:name="android.intent.action.ACTION_POWER_DISCONNECTED" />
+				<action android:name="android.intent.action.CAMERA_BUTTON" />
+				<action android:name="android.intent.action.BOOT_COMPLETED" />
+				<action android:name="android.intent.action.DATE_CHANGED" />
+				<action android:name="android.intent.action.LOCALE_CHANGED" />
+				<action android:name="android.intent.action.SCREEN_OFF" />
+				<action android:name="android.intent.action.SCREEN_ON" />
+				<action android:name="android.intent.action.TIME_SET" />
+				<action android:name="android.intent.action.TIME_TICK" />
+				<action android:name="android.intent.action.TIMEZONE_CHANGED" />
 			</intent-filter>
 		</receiver>
 		
