--- a/tests/AndroidManifest.xml
+++ b/tests/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.zhaoshouren.android.apps.deskclock.test"
+      package="com.zhaoshouren.android.apps.clock.test"
       android:versionCode="1"
       android:versionName="1.0">
     <uses-sdk android:minSdkVersion="7" />
