--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -11,7 +11,8 @@
 	<uses-permission android:name="android.permission.DEVICE_POWER" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.INTERNET" />
-	<uses-sdk android:targetSdkVersion="8" android:minSdkVersion="7" />
+	<uses-sdk android:targetSdkVersion="10" android:minSdkVersion="7" />
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
 	<application 
 		android:label="@string/app_label"
@@ -44,7 +45,7 @@
 		</activity>
 
 		<activity
-			android:name=".ui.AlarmListActivity"
+			android:name=".ui.AlarmListActivityNew"
 			android:label="@string/alarm_list_title" 
 			android:taskAffinity=""
 			android:excludeFromRecents="true"
