--- a/tests/AndroidManifest.xml
+++ b/tests/AndroidManifest.xml
@@ -3,10 +3,11 @@
       package="com.zhaoshouren.android.apps.clock.test"
       android:versionCode="1"
       android:versionName="1.0">
-    <uses-sdk android:minSdkVersion="7" />
-    <instrumentation android:targetPackage="com.zhaoshouren.android.apps.deskclock" android:name="android.test.InstrumentationTestRunner" />
-    <uses-permission android:name="android.permission.CHANGE_CONFIGURATION"></uses-permission>
-    <application android:icon="@drawable/icon" android:label="@string/app_name" android:permission="android.permission.CHANGE_CONFIGURATION" >
+    <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="8"/>
+    <instrumentation android:targetPackage="com.zhaoshouren.android.apps.clock" android:name="android.test.InstrumentationTestRunner" />
+    <uses-permission android:name="android.permission.SET_TIME" /><uses-permission android:name="android.permission.CHANGE_CONFIGURATION"></uses-permission>
+    
+    <application android:icon="@drawable/icon" android:label="@string/app_name" android:permission="android.permission.SET_TIME" android:debuggable="true">
     	<uses-library android:name="android.test.runner" />
     </application>
 </manifest>
